# Blinky

./: CMakeLists.txt  README.md  m5gps_settings.py  main.c  minmea.h  nextion.py
Nextion/: 186-1863860_satellite-gps-satellite-icon-png-free-transparent-png-457911322.xcf  alba.tft  comic32.zi  mistral32.zi  san16.zi  sans24.zi  sans36.zi  sans48.zi
